--- a/home.css
+++ b/home.css
@@ -35,7 +35,7 @@ header .toggle img {
     width: 100%;
     min-height: 100vh;
     padding: 0 100px;
-    background: url(/img/back.gif);
+    background: url(img/back.gif);
     background-position: center;
     background-size: cover;
     display: flex;
